# liteagent

./: .editorconfig  .gitignore  .python-version  CLAUDE.md  README.md  pyproject.toml  pytest.ini  weather.py
.fleet/: settings.json
examples/: 01_hello_world.py  02_calculator_tool.py  03_web_researcher.py  04_data_extractor.py  05_customer_support.py  06_research_team.py  07_smart_assistant.py  08_secure_agent.py  09_stock_analyzer.py  10_production_agent.py  arxiv_searcher.py  atlassian_chat.py  bot.py  brazilian_agent.py  browseruse.py  chatbot.py  classifier.py  claude_example.py  cot.py  cot_wikipedia.py  currencies.py  do_i_recall.py  guardrails_demo.py  hello_agent.py  imdb_sentiment_analysis.py  magic_function.py  multi_agent_chatbot.py  news.py  openalex.py  opentrivia.py  pdf_explainer.py  pyrunner.py  rag.py  rag_chroma.py  reasoner.py  reddit.py  savings.py  search_team.py  semantic_academic.py  send_email.py  (+6 more)
liteagent/: __init__.py  agent.py  agent_dispatch.py  auditors.py  auto_function.py  codec.py  decorators.py  events.py  logger.py  message.py  prompts.py  provider.py  reasoning.py  session.py  tool.py
liteagent/bus/: __init__.py  eventbus.py
liteagent/chat/: __init__.py  terminal.py
liteagent/chat/textual/: __init__.py  app.py  helpers.py  plotext.py  styles.py  table.py  widgets.py
liteagent/chat/textual/widgets/: __init__.py  assistant_message.py  base_widget.py  chat_view.py  internal_chat.py  reactive_markdown.py  tool_use.py  user_message.py  widget_renderer.py
liteagent/guardrails/: __init__.py  base.py  exceptions.py
liteagent/guardrails/builtin/: __init__.py  content.py  privacy.py  security.py
liteagent/internal/: __init__.py  as_coroutine.py  atomic_string.py  audit.py  cached_iterator.py  cleanup.py  depends_on.py  memoized.py  nlp.py
liteagent/misc/: __init__.py  document_metadata.py  rich_utils.py
liteagent/providers/: __init__.py  azure_ai.py  claude_provider.py  gemini_provider.py  llamacpp.py  oai.py  ollama_provider.py  provider.py  providers.py  transformer.py  vllm_provider.py
liteagent/providers/anthropic/: __init__.py  provider.py
liteagent/providers/azure/: __init__.py  provider.py
liteagent/providers/google/: __init__.py  provider.py
liteagent/providers/ollama/: __init__.py  provider.py
liteagent/providers/openai/: __init__.py  provider.py
liteagent/reasoning/: cot.py
liteagent/tokenizers/: __init__.py  fastembed_tokenizer.py  openai_tokenizer.py  sentence_transformer_tokenizer.py  tokenizer.py  transformers_tokenizer.py
liteagent/tools/: __init__.py  apis.py  arxiv.py  brasil_api.py  browser.py  calc.py  calculator.py  clock.py  confluence.py  crawl4ai.py  currency_api.py  duckduckgo.py  email_sender.py  files.py  http.py  http_call.py  http_decorator.py  ipify.py  jira.py  memoria.py  openalex.py  openmeteo.py  pdf.py  py.py  pymupdf.py  reddit.py  scopus.py  semantic_scholar.py  terminal.py  vector.py  vision.py  web_of_science.py  websearch.py  wikipedia.py  yfinance.py
liteagent/vector/: __init__.py  chroma_db.py  chroma_store.py  chunk.py  in_memory_db.py  models.py  pgvector_db.py  qdrant_db.py  vector_db.py  vector_store.py
liteagent/vector/loaders/: __init__.py  document_loader.py  loaders.py  pdf_loader.py  url_loader.py
liteagents/: __init__.py  agent.py  agent_decorator.py  auditors.py  message.py  tool.py
liteagents/misc/: markdown.py  pretty.py
liteagents/providers/: __init__.py  oai.py  ollama_provider.py  provider.py  providers.py
liteagents/reasoning/: __init__.py  cot.py
liteagents/tools/: __init__.py  http_call.py  openalex.py  py.py  pymupdf.py  websearch.py  wikipedia.py
tests/: BDD_MIGRATION.md  BDD_MIGRATION_FINAL.md  BDD_MIGRATION_UPDATE.md  __init__.py  conftest.py  test_agent_features.py  test_agent_teams.py  test_atomic_string.py  test_builtin_tools.py  test_cached_iterator.py  test_error_handling.py  test_files.py  test_memoria.py  test_sessions.py  test_streaming.py  test_structured_output.py  test_tool_calling.py  test_yfinance.py
tests/features/: agent_teams.feature  builtin_tools.feature  cached_iterator.feature  error_handling.feature  files.feature  guardrails.feature  memoria.feature  sessions.feature  streaming.feature  structured_output.feature  tool_calling.feature  vector_db.feature  wikipedia.feature  yfinance.feature
tests/legacy_ward/: test_error_handling.py  test_streaming.py  test_structured_output.py  test_vector_db.py  test_wikipedia.py
tests/step_defs/: conftest.py  test_agent_teams.py  test_builtin_tools.py  test_cached_iterator.py  test_error_handling.py  test_files.py  test_guardrails.py  test_memoria.py  test_sessions.py  test_streaming.py  test_structured_output.py  test_tool_calling.py  test_vector_db.py  test_wikipedia.py  test_yfinance.py
