[project]
name = "liteagents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiocache>=0.12.3",
    "aiosmtpd>=1.4.6",
    "anthropic>=0.47.1",
    "art>=6.5",
    "asyncpraw>=7.2.0",
    "atlassian-python-api>=4.0.3",
    "azure-ai-inference>=1.0.0b9",
    "chromadb>=0.6.3",
    "crawl4ai>=0.4.248",
    "datasets>=3.2.0",
    "docker>=7.1.0",
    "duckduckgo-search>=7.3.0",
    "fastembed>=0.5.1",
    "feedparser>=6.0.11",
    "getchlib>=1.1.2",
    "google-genai>=1.0.0",
    "googlesearch-python>=1.2.5",
    "huggingface-hub>=0.28.0",
    "import-tracker>=3.2.1",
    "importtime>=1.0.3.2",
    "llama-cpp-python>=0.3.6",
    "markdownify>=0.14.1",
    "mlx-lm>=0.21.1",
    "ollama>=0.4.6",
    "openai>=1.59.6",
    "openmeteopy",
    "pgvector>=0.3.6",
    "pyalex>=0.15.1",
    "pydantic>=2.10.5",
    "pymupdf4llm>=0.0.17",
    "pyyaml>=6.0.2",
    "qdrant-client>=1.13.2",
    "rich>=13.9.4",
    "sentence-transformers>=3.4.1",
    "sqlalchemy>=2.0.38",
    "structlog>=25.1.0",
    "textual>=3.1.0",
    "textual-dev>=1.7.0",
    "tiktoken>=0.9.0",
    "timm>=1.0.14",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.48.2",
    "yfinance>=0.2.54",
]

[tool.uv.sources]
openmeteopy = { git = "https://github.com/m0rp43us/openmeteopy" }
